[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=4]
[ext_resource path="res://Menus/store/store_menu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[node name="store_menu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -292.5
margin_right = 385.0
margin_bottom = 292.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -235.0
margin_right = 294.5
margin_bottom = 235.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sw" type="Button" parent="Panel/VBoxContainer"]
margin_right = 589.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Select Weapon"

[node name="ss" type="Button" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 589.0
margin_bottom = 210.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Select Skin"

[node name="bw" type="Button" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 589.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Buy Weapons"

[node name="bs" type="Button" parent="Panel/VBoxContainer"]
margin_top = 390.0
margin_right = 589.0
margin_bottom = 470.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Buy Skins"

[node name="back" type="Button" parent="."]
margin_left = 53.0
margin_top = 639.0
margin_right = 163.0
margin_bottom = 679.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Panel/VBoxContainer/sw" to="." method="_on_sw_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/bw" to="." method="_on_bw_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
